parsing/parser.output
Terminals unused in grammar

    NUMBER_OVERFLOW


State 15 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 33 conflicts: 2 shift/reduce
State 46 conflicts: 2 shift/reduce
State 48 conflicts: 2 shift/reduce
State 54 conflicts: 3 shift/reduce
State 56 conflicts: 3 shift/reduce
State 98 conflicts: 2 shift/reduce
State 114 conflicts: 2 shift/reduce
State 116 conflicts: 2 shift/reduce
State 117 conflicts: 3 shift/reduce
State 118 conflicts: 3 shift/reduce
State 119 conflicts: 8 shift/reduce
State 120 conflicts: 15 shift/reduce
State 121 conflicts: 8 shift/reduce
State 122 conflicts: 8 shift/reduce
State 123 conflicts: 3 shift/reduce
State 124 conflicts: 8 shift/reduce
State 125 conflicts: 8 shift/reduce
State 126 conflicts: 3 shift/reduce
State 127 conflicts: 3 shift/reduce
State 128 conflicts: 3 shift/reduce
State 129 conflicts: 3 shift/reduce


Grammar

    0 $accept: source $end

    1 source: sourceitem_list

    2 sourceitem_list: sourceitem_list sourceitem
    3                | %empty

    4 sourceitem: func_def

    5 func_def: DEF func_signature statement_list END

    6 func_signature: ID '(' arg_list ')' of_type_ref
    7               | ID '(' arg_list ')'

    8 arg_list: arg_list ',' arg
    9         | arg
   10         | %empty

   11 arg: ID of_type_ref
   12    | ID

   13 statement_list: statement_list statement
   14               | %empty

   15 statement: error ';'
   16          | ID of_type_ref ';'
   17          | ID of_type_ref '=' expr ';'
   18          | statement WHILE expr ';'
   19          | statement UNTIL expr ';'
   20          | BREAK ';'
   21          | expr ';'
   22          | RETURN ';'
   23          | RETURN error ';'
   24          | RETURN expr ';'
   25          | WHILE error END
   26          | WHILE expr statement_list END
   27          | statement WHILE error END
   28          | statement WHILE expr statement_list END
   29          | UNTIL error END
   30          | UNTIL expr statement_list END
   31          | statement UNTIL error END
   32          | statement UNTIL expr statement_list END
   33          | IF expr THEN error ELSE
   34          | IF expr THEN statement ELSE statement
   35          | IF error THEN
   36          | IF expr THEN statement
   37          | '{' stat_or_srcitem_list '}'
   38          | '{' error '}'
   39          | BEG stat_or_srcitem_list END
   40          | BEG error END

   41 stat_or_srcitem_list: stat_or_srcitem_list stat_or_srcitem
   42                     | %empty

   43 stat_or_srcitem: statement
   44                | sourceitem

   45 expr: expr '=' expr
   46     | expr '+' expr
   47     | expr '-' expr
   48     | expr '*' expr
   49     | expr '/' expr
   50     | expr AND expr
   51     | expr OR expr
   52     | expr EQUAL expr
   53     | expr NOT_EQUAL expr
   54     | expr '<' expr
   55     | expr '>' expr
   56     | expr LT_EQUAL expr
   57     | expr GT_EQUAL expr
   58     | NOT expr
   59     | '-' expr
   60     | '(' expr ')'
   61     | expr '(' expr_list ')'
   62     | expr '[' expr DOTS expr ']'
   63     | expr '[' expr ']'
   64     | ID
   65     | literal

   66 literal: TRUE
   67        | FALSE
   68        | STR
   69        | CHAR
   70        | NUMBER
   71        | NUMBER_BIG

   72 expr_list: expr_list ',' expr
   73          | expr
   74          | %empty

   75 of_type_ref: OF type_ref

   76 type_ref: TYPE_BOOL
   77         | TYPE_BYTE
   78         | TYPE_UBYTE
   79         | TYPE_SHORT
   80         | TYPE_USHORT
   81         | TYPE_INT
   82         | TYPE_UINT
   83         | TYPE_LONG
   84         | TYPE_ULONG
   85         | TYPE_HUGE
   86         | TYPE_UHUGE
   87         | TYPE_CHAR
   88         | TYPE_STRING
   89         | ID
   90         | type_ref ARRAY '[' NUMBER ']'
   91         | type_ref ARRAY '[' NUMBER_BIG ']'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 6 7 60 61
    ')' (41) 6 7 60 61
    '*' (42) 48
    '+' (43) 46
    ',' (44) 8 72
    '-' (45) 47 59
    '/' (47) 49
    ';' (59) 15 16 17 18 19 20 21 22 23 24
    '<' (60) 54
    '=' (61) 17 45
    '>' (62) 55
    '[' (91) 62 63 90 91
    ']' (93) 62 63 90 91
    '{' (123) 37 38
    '}' (125) 37 38
    error <size> (256) 15 23 25 27 29 31 33 35 38 40
    OF (258) 75
    ARRAY (259) 90 91
    BEG (260) 39 40
    END (261) 5 25 26 27 28 29 30 31 32 39 40
    BREAK (262) 20
    WHILE (263) 18 25 26 27 28
    UNTIL (264) 19 29 30 31 32
    ELSE (265) 33 34
    IF (266) 33 34 35 36
    THEN (267) 33 34 35 36
    DEF (268) 5
    DOTS (269) 62
    RETURN (270) 22 23 24
    AND (271) 50
    OR (272) 51
    NOT (273) 58
    EQUAL (274) 52
    NOT_EQUAL (275) 53
    LT_EQUAL (276) 56
    GT_EQUAL (277) 57
    FALSE (278) 67
    TRUE (279) 66
    ID <size> (280) 6 7 11 12 16 17 64 89
    STR <size> (281) 68
    CHAR <size> (282) 69
    NUMBER <size> (283) 70 90
    NUMBER_BIG <size> (284) 71 91
    NUMBER_OVERFLOW <size> (285)
    TYPE_BOOL (286) 76
    TYPE_BYTE (287) 77
    TYPE_UBYTE (288) 78
    TYPE_SHORT (289) 79
    TYPE_USHORT (290) 80
    TYPE_INT (291) 81
    TYPE_UINT (292) 82
    TYPE_LONG (293) 83
    TYPE_ULONG (294) 84
    TYPE_HUGE (295) 85
    TYPE_UHUGE (296) 86
    TYPE_CHAR (297) 87
    TYPE_STRING (298) 88
    UMINUS (299)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    source (61)
        on left: 1
        on right: 0
    sourceitem_list <size> (62)
        on left: 2 3
        on right: 1 2
    sourceitem <size> (63)
        on left: 4
        on right: 2 44
    func_def <size> (64)
        on left: 5
        on right: 4
    func_signature <size> (65)
        on left: 6 7
        on right: 5
    arg_list <size> (66)
        on left: 8 9 10
        on right: 6 7 8
    arg (67)
        on left: 11 12
        on right: 8 9
    statement_list <size> (68)
        on left: 13 14
        on right: 5 13 26 28 30 32
    statement <size> (69)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 13 18 19 27 28 31 32 34 36 43
    stat_or_srcitem_list <size> (70)
        on left: 41 42
        on right: 37 39 41
    stat_or_srcitem (71)
        on left: 43 44
        on right: 41
    expr (72)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 17 18 19 21 24 26 28 30 32 33 34 36 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 72 73
    literal (73)
        on left: 66 67 68 69 70 71
        on right: 65
    expr_list <size> (74)
        on left: 72 73 74
        on right: 61 72
    of_type_ref (75)
        on left: 75
        on right: 6 11 16 17
    type_ref (76)
        on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 75 90 91


State 0

    0 $accept: . source $end

    $default  reduce using rule 3 (sourceitem_list)

    source           go to state 1
    sourceitem_list  go to state 2


State 1

    0 $accept: source . $end

    $end  shift, and go to state 3


State 2

    1 source: sourceitem_list .
    2 sourceitem_list: sourceitem_list . sourceitem

    DEF  shift, and go to state 4

    $default  reduce using rule 1 (source)

    sourceitem  go to state 5
    func_def    go to state 6


State 3

    0 $accept: source $end .

    $default  accept


State 4

    5 func_def: DEF . func_signature statement_list END

    ID  shift, and go to state 7

    func_signature  go to state 8


State 5

    2 sourceitem_list: sourceitem_list sourceitem .

    $default  reduce using rule 2 (sourceitem_list)


State 6

    4 sourceitem: func_def .

    $default  reduce using rule 4 (sourceitem)


State 7

    6 func_signature: ID . '(' arg_list ')' of_type_ref
    7               | ID . '(' arg_list ')'

    '('  shift, and go to state 9


State 8

    5 func_def: DEF func_signature . statement_list END

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 10


State 9

    6 func_signature: ID '(' . arg_list ')' of_type_ref
    7               | ID '(' . arg_list ')'

    ID  shift, and go to state 11

    $default  reduce using rule 10 (arg_list)

    arg_list  go to state 12
    arg       go to state 13


State 10

    5 func_def: DEF func_signature statement_list . END
   13 statement_list: statement_list . statement

    error       shift, and go to state 14
    BEG         shift, and go to state 15
    END         shift, and go to state 16
    BREAK       shift, and go to state 17
    WHILE       shift, and go to state 18
    UNTIL       shift, and go to state 19
    IF          shift, and go to state 20
    RETURN      shift, and go to state 21
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 25
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32

    statement  go to state 33
    expr       go to state 34
    literal    go to state 35


State 11

   11 arg: ID . of_type_ref
   12    | ID .

    OF  shift, and go to state 36

    $default  reduce using rule 12 (arg)

    of_type_ref  go to state 37


State 12

    6 func_signature: ID '(' arg_list . ')' of_type_ref
    7               | ID '(' arg_list . ')'
    8 arg_list: arg_list . ',' arg

    ')'  shift, and go to state 38
    ','  shift, and go to state 39


State 13

    9 arg_list: arg .

    $default  reduce using rule 9 (arg_list)


State 14

   15 statement: error . ';'

    ';'  shift, and go to state 40


State 15

   39 statement: BEG . stat_or_srcitem_list END
   40          | BEG . error END

    error  shift, and go to state 41

    error       [reduce using rule 42 (stat_or_srcitem_list)]
    BEG         reduce using rule 42 (stat_or_srcitem_list)
    END         reduce using rule 42 (stat_or_srcitem_list)
    BREAK       reduce using rule 42 (stat_or_srcitem_list)
    WHILE       reduce using rule 42 (stat_or_srcitem_list)
    UNTIL       reduce using rule 42 (stat_or_srcitem_list)
    IF          reduce using rule 42 (stat_or_srcitem_list)
    DEF         reduce using rule 42 (stat_or_srcitem_list)
    RETURN      reduce using rule 42 (stat_or_srcitem_list)
    NOT         reduce using rule 42 (stat_or_srcitem_list)
    FALSE       reduce using rule 42 (stat_or_srcitem_list)
    TRUE        reduce using rule 42 (stat_or_srcitem_list)
    ID          reduce using rule 42 (stat_or_srcitem_list)
    STR         reduce using rule 42 (stat_or_srcitem_list)
    CHAR        reduce using rule 42 (stat_or_srcitem_list)
    NUMBER      reduce using rule 42 (stat_or_srcitem_list)
    NUMBER_BIG  reduce using rule 42 (stat_or_srcitem_list)
    '-'         reduce using rule 42 (stat_or_srcitem_list)
    '('         reduce using rule 42 (stat_or_srcitem_list)
    '{'         reduce using rule 42 (stat_or_srcitem_list)

    stat_or_srcitem_list  go to state 42


State 16

    5 func_def: DEF func_signature statement_list END .

    $default  reduce using rule 5 (func_def)


State 17

   20 statement: BREAK . ';'

    ';'  shift, and go to state 43


State 18

   25 statement: WHILE . error END
   26          | WHILE . expr statement_list END

    error       shift, and go to state 44
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 46
    literal  go to state 35


State 19

   29 statement: UNTIL . error END
   30          | UNTIL . expr statement_list END

    error       shift, and go to state 47
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 48
    literal  go to state 35


State 20

   33 statement: IF . expr THEN error ELSE
   34          | IF . expr THEN statement ELSE statement
   35          | IF . error THEN
   36          | IF . expr THEN statement

    error       shift, and go to state 49
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 50
    literal  go to state 35


State 21

   22 statement: RETURN . ';'
   23          | RETURN . error ';'
   24          | RETURN . expr ';'

    error       shift, and go to state 51
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    ';'         shift, and go to state 52

    expr     go to state 53
    literal  go to state 35


State 22

   58 expr: NOT . expr

    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 54
    literal  go to state 35


State 23

   67 literal: FALSE .

    $default  reduce using rule 67 (literal)


State 24

   66 literal: TRUE .

    $default  reduce using rule 66 (literal)


State 25

   16 statement: ID . of_type_ref ';'
   17          | ID . of_type_ref '=' expr ';'
   64 expr: ID .

    OF  shift, and go to state 36

    $default  reduce using rule 64 (expr)

    of_type_ref  go to state 55


State 26

   68 literal: STR .

    $default  reduce using rule 68 (literal)


State 27

   69 literal: CHAR .

    $default  reduce using rule 69 (literal)


State 28

   70 literal: NUMBER .

    $default  reduce using rule 70 (literal)


State 29

   71 literal: NUMBER_BIG .

    $default  reduce using rule 71 (literal)


State 30

   59 expr: '-' . expr

    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 56
    literal  go to state 35


State 31

   60 expr: '(' . expr ')'

    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 57
    literal  go to state 35


State 32

   37 statement: '{' . stat_or_srcitem_list '}'
   38          | '{' . error '}'

    error  shift, and go to state 58

    error       [reduce using rule 42 (stat_or_srcitem_list)]
    BEG         reduce using rule 42 (stat_or_srcitem_list)
    BREAK       reduce using rule 42 (stat_or_srcitem_list)
    WHILE       reduce using rule 42 (stat_or_srcitem_list)
    UNTIL       reduce using rule 42 (stat_or_srcitem_list)
    IF          reduce using rule 42 (stat_or_srcitem_list)
    DEF         reduce using rule 42 (stat_or_srcitem_list)
    RETURN      reduce using rule 42 (stat_or_srcitem_list)
    NOT         reduce using rule 42 (stat_or_srcitem_list)
    FALSE       reduce using rule 42 (stat_or_srcitem_list)
    TRUE        reduce using rule 42 (stat_or_srcitem_list)
    ID          reduce using rule 42 (stat_or_srcitem_list)
    STR         reduce using rule 42 (stat_or_srcitem_list)
    CHAR        reduce using rule 42 (stat_or_srcitem_list)
    NUMBER      reduce using rule 42 (stat_or_srcitem_list)
    NUMBER_BIG  reduce using rule 42 (stat_or_srcitem_list)
    '-'         reduce using rule 42 (stat_or_srcitem_list)
    '('         reduce using rule 42 (stat_or_srcitem_list)
    '{'         reduce using rule 42 (stat_or_srcitem_list)
    '}'         reduce using rule 42 (stat_or_srcitem_list)

    stat_or_srcitem_list  go to state 59


State 33

   13 statement_list: statement_list statement .
   18 statement: statement . WHILE expr ';'
   19          | statement . UNTIL expr ';'
   27          | statement . WHILE error END
   28          | statement . WHILE expr statement_list END
   31          | statement . UNTIL error END
   32          | statement . UNTIL expr statement_list END

    WHILE  shift, and go to state 60
    UNTIL  shift, and go to state 61

    WHILE     [reduce using rule 13 (statement_list)]
    UNTIL     [reduce using rule 13 (statement_list)]
    $default  reduce using rule 13 (statement_list)


State 34

   21 statement: expr . ';'
   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    AND        shift, and go to state 62
    OR         shift, and go to state 63
    EQUAL      shift, and go to state 64
    NOT_EQUAL  shift, and go to state 65
    LT_EQUAL   shift, and go to state 66
    GT_EQUAL   shift, and go to state 67
    '='        shift, and go to state 68
    '<'        shift, and go to state 69
    '>'        shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '('        shift, and go to state 75
    ';'        shift, and go to state 76
    '['        shift, and go to state 77


State 35

   65 expr: literal .

    $default  reduce using rule 65 (expr)


State 36

   75 of_type_ref: OF . type_ref

    ID           shift, and go to state 78
    TYPE_BOOL    shift, and go to state 79
    TYPE_BYTE    shift, and go to state 80
    TYPE_UBYTE   shift, and go to state 81
    TYPE_SHORT   shift, and go to state 82
    TYPE_USHORT  shift, and go to state 83
    TYPE_INT     shift, and go to state 84
    TYPE_UINT    shift, and go to state 85
    TYPE_LONG    shift, and go to state 86
    TYPE_ULONG   shift, and go to state 87
    TYPE_HUGE    shift, and go to state 88
    TYPE_UHUGE   shift, and go to state 89
    TYPE_CHAR    shift, and go to state 90
    TYPE_STRING  shift, and go to state 91

    type_ref  go to state 92


State 37

   11 arg: ID of_type_ref .

    $default  reduce using rule 11 (arg)


State 38

    6 func_signature: ID '(' arg_list ')' . of_type_ref
    7               | ID '(' arg_list ')' .

    OF  shift, and go to state 36

    $default  reduce using rule 7 (func_signature)

    of_type_ref  go to state 93


State 39

    8 arg_list: arg_list ',' . arg

    ID  shift, and go to state 11

    arg  go to state 94


State 40

   15 statement: error ';' .

    $default  reduce using rule 15 (statement)


State 41

   40 statement: BEG error . END

    END  shift, and go to state 95


State 42

   39 statement: BEG stat_or_srcitem_list . END
   41 stat_or_srcitem_list: stat_or_srcitem_list . stat_or_srcitem

    error       shift, and go to state 14
    BEG         shift, and go to state 15
    END         shift, and go to state 96
    BREAK       shift, and go to state 17
    WHILE       shift, and go to state 18
    UNTIL       shift, and go to state 19
    IF          shift, and go to state 20
    DEF         shift, and go to state 4
    RETURN      shift, and go to state 21
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 25
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32

    sourceitem       go to state 97
    func_def         go to state 6
    statement        go to state 98
    stat_or_srcitem  go to state 99
    expr             go to state 34
    literal          go to state 35


State 43

   20 statement: BREAK ';' .

    $default  reduce using rule 20 (statement)


State 44

   25 statement: WHILE error . END

    END  shift, and go to state 100


State 45

   64 expr: ID .

    $default  reduce using rule 64 (expr)


State 46

   26 statement: WHILE expr . statement_list END
   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    AND        shift, and go to state 62
    OR         shift, and go to state 63
    EQUAL      shift, and go to state 64
    NOT_EQUAL  shift, and go to state 65
    LT_EQUAL   shift, and go to state 66
    GT_EQUAL   shift, and go to state 67
    '='        shift, and go to state 68
    '<'        shift, and go to state 69
    '>'        shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '('        shift, and go to state 75
    '['        shift, and go to state 77

    '-'       [reduce using rule 14 (statement_list)]
    '('       [reduce using rule 14 (statement_list)]
    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 101


State 47

   29 statement: UNTIL error . END

    END  shift, and go to state 102


State 48

   30 statement: UNTIL expr . statement_list END
   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    AND        shift, and go to state 62
    OR         shift, and go to state 63
    EQUAL      shift, and go to state 64
    NOT_EQUAL  shift, and go to state 65
    LT_EQUAL   shift, and go to state 66
    GT_EQUAL   shift, and go to state 67
    '='        shift, and go to state 68
    '<'        shift, and go to state 69
    '>'        shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '('        shift, and go to state 75
    '['        shift, and go to state 77

    '-'       [reduce using rule 14 (statement_list)]
    '('       [reduce using rule 14 (statement_list)]
    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 103


State 49

   35 statement: IF error . THEN

    THEN  shift, and go to state 104


State 50

   33 statement: IF expr . THEN error ELSE
   34          | IF expr . THEN statement ELSE statement
   36          | IF expr . THEN statement
   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    THEN       shift, and go to state 105
    AND        shift, and go to state 62
    OR         shift, and go to state 63
    EQUAL      shift, and go to state 64
    NOT_EQUAL  shift, and go to state 65
    LT_EQUAL   shift, and go to state 66
    GT_EQUAL   shift, and go to state 67
    '='        shift, and go to state 68
    '<'        shift, and go to state 69
    '>'        shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '('        shift, and go to state 75
    '['        shift, and go to state 77


State 51

   23 statement: RETURN error . ';'

    ';'  shift, and go to state 106


State 52

   22 statement: RETURN ';' .

    $default  reduce using rule 22 (statement)


State 53

   24 statement: RETURN expr . ';'
   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    AND        shift, and go to state 62
    OR         shift, and go to state 63
    EQUAL      shift, and go to state 64
    NOT_EQUAL  shift, and go to state 65
    LT_EQUAL   shift, and go to state 66
    GT_EQUAL   shift, and go to state 67
    '='        shift, and go to state 68
    '<'        shift, and go to state 69
    '>'        shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '('        shift, and go to state 75
    ';'        shift, and go to state 107
    '['        shift, and go to state 77


State 54

   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   58     | NOT expr .
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    AND        shift, and go to state 62
    OR         shift, and go to state 63
    EQUAL      shift, and go to state 64
    NOT_EQUAL  shift, and go to state 65
    LT_EQUAL   shift, and go to state 66
    GT_EQUAL   shift, and go to state 67
    '='        shift, and go to state 68
    '<'        shift, and go to state 69
    '>'        shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '('        shift, and go to state 75
    '['        shift, and go to state 77

    NOT_EQUAL  [reduce using rule 58 (expr)]
    '('        [reduce using rule 58 (expr)]
    '['        [reduce using rule 58 (expr)]
    $default   reduce using rule 58 (expr)


State 55

   16 statement: ID of_type_ref . ';'
   17          | ID of_type_ref . '=' expr ';'

    '='  shift, and go to state 108
    ';'  shift, and go to state 109


State 56

   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   59     | '-' expr .
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    NOT_EQUAL  shift, and go to state 65
    '('        shift, and go to state 75
    '['        shift, and go to state 77

    NOT_EQUAL  [reduce using rule 59 (expr)]
    '('        [reduce using rule 59 (expr)]
    '['        [reduce using rule 59 (expr)]
    $default   reduce using rule 59 (expr)


State 57

   45 expr: expr . '=' expr
   46     | expr . '+' expr
   47     | expr . '-' expr
   48     | expr . '*' expr
   49     | expr . '/' expr
   50     | expr . AND expr
   51     | expr . OR expr
   52     | expr . EQUAL expr
   53     | expr . NOT_EQUAL expr
   54     | expr . '<' expr
   55     | expr . '>' expr
   56     | expr . LT_EQUAL expr
   57     | expr . GT_EQUAL expr
   60     | '(' expr . ')'
   61     | expr . '(' expr_list ')'
   62     | expr . '[' expr DOTS expr ']'
   63     | expr . '[' expr ']'

    AND        shift, and go to state 62
    OR         shift, and go to state 63
    EQUAL      shift, and go to state 64
    NOT_EQUAL  shift, and go to state 65
    LT_EQUAL   shift, and go to state 66
    GT_EQUAL   shift, and go to state 67
    '='        shift, and go to state 68
    '<'        shift, and go to state 69
    '>'        shift, and go to state 70
    '+'        shift, and go to state 71
    '-'        shift, and go to state 72
    '*'        shift, and go to state 73
    '/'        shift, and go to state 74
    '('        shift, and go to state 75
    ')'        shift, and go to state 110
    '['        shift, and go to state 77


State 58

   38 statement: '{' error . '}'

    '}'  shift, and go to state 111


State 59

   37 statement: '{' stat_or_srcitem_list . '}'
   41 stat_or_srcitem_list: stat_or_srcitem_list . stat_or_srcitem

    error       shift, and go to state 14
    BEG         shift, and go to state 15
    BREAK       shift, and go to state 17
    WHILE       shift, and go to state 18
    UNTIL       shift, and go to state 19
    IF          shift, and go to state 20
    DEF         shift, and go to state 4
    RETURN      shift, and go to state 21
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 25
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 32
    '}'         shift, and go to state 112

    sourceitem       go to state 97
    func_def         go to state 6
    statement        go to state 98
    stat_or_srcitem  go to state 99
    expr             go to state 34
    literal          go to state 35


State 60

   18 statement: statement WHILE . expr ';'
   27          | statement WHILE . error END
   28          | statement WHILE . expr statement_list END

    error       shift, and go to state 113
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 114
    literal  go to state 35


State 61

   19 statement: statement UNTIL . expr ';'
   31          | statement UNTIL . error END
   32          | statement UNTIL . expr statement_list END

    error       shift, and go to state 115
    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 116
    literal  go to state 35


State 62

   50 expr: expr AND . expr

    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 117
    literal  go to state 35


State 63

   51 expr: expr OR . expr

    NOT         shift, and go to state 22
    FALSE       shift, and go to state 23
    TRUE        shift, and go to state 24
    ID          shift, and go to state 45
    STR         shift, and go to state 26
    CHAR        shift, and go to state 27
    NUMBER      shift, and go to state 28
    NUMBER_BIG  shift, and go to state 29
    '-'         shift, and go to state 30
    '('         shift, and go to state 31

    expr     go to state 118
    literal  go to state 35


State 64

   52 expr: expr EQUAL . expr
